.provarCaches/00D5f000005vwGkEAI/objects/rstk__icusage__c.object
<CustomObject>
    <description>icusage__c; BOC</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__icusage_item__c + TEXT( rstk__icusage_txndate__c ) +  TEXT( rstk__icusage_seq__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__icusage_item__c + &apos; (&apos; + TEXT( rstk__icusage_txndate__c ) + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icusage_askdate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Moment of API Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__icusage_icdailyusg__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Daily Usage Summary</label>
        <referenceTo>rstk__icdailyusg__c</referenceTo>
        <relationshipLabel>WMS Usage</relationshipLabel>
        <relationshipName>icusages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__icusage_icitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>WMS Usage</relationshipLabel>
        <relationshipName>icusages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icusage_item__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Item Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icusage_lotno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Lot Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icusage_seq__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sequence Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icusage_txndate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__icusage_txnqty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Issue Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>WMS Usage</label>
    <listViews>
        <fullName>rstk__RS_WMS_Usage</fullName>
        <columns>NAME</columns>
        <columns>rstk__icusage_item__c</columns>
        <columns>rstk__icusage_icitem__c</columns>
        <columns>rstk__icusage_icdailyusg__c</columns>
        <columns>rstk__icusage_txnqty__c</columns>
        <columns>rstk__icusage_txndate__c</columns>
        <columns>rstk__icusage_lotno__c</columns>
        <columns>rstk__icusage_askdate__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>WMS Usage</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WMS Usage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>